--- a/app/src/main/res/layout/activity_bet_game.xml
+++ b/app/src/main/res/layout/activity_bet_game.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mathieu.parissportifs.BetGame">
+    tools:context="com.example.mathieu.parissportifs.BetGame"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/textViewHomeTeam"
@@ -15,8 +16,8 @@
         android:gravity="center"
         android:layout_marginTop="33dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewHour"
-        app:layout_constraintRight_toLeftOf="@+id/textViewAwayTeam"
-        android:layout_marginRight="40dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageViewHomeTeam"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/textViewAwayTeam"
@@ -26,24 +27,26 @@
         android:gravity="center"
         android:text="TextView"
         app:layout_constraintRight_toLeftOf="@+id/imageViewAwayTeam"
-        android:layout_marginRight="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="76dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
 
     <Button
         android:id="@+id/buttonSaveBet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="156dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/bouton"
+        android:background="#3F51B4"
         android:text="Parier"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberPickerHome"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintVertical_bias="0.281" />
 
     <TextView
         android:id="@+id/textViewHour"
@@ -60,32 +63,29 @@
 
     <ImageView
         android:id="@+id/imageViewHomeTeam"
-        android:layout_width="41dp"
-        android:layout_height="29dp"
+        android:layout_width="49dp"
+        android:layout_height="43dp"
         app:srcCompat="@drawable/angers"
-        app:layout_constraintRight_toLeftOf="@+id/textViewHomeTeam"
-        android:layout_marginRight="0dp"
         android:layout_marginBottom="49dp"
         app:layout_constraintBottom_toTopOf="@+id/numberPickerHome"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="1.0"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.647" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewAwayTeam"
-        android:layout_width="41dp"
-        android:layout_height="29dp"
-        app:srcCompat="@drawable/amiens"
+        android:layout_width="49dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.114" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.09"
+        app:srcCompat="@drawable/amiens" />
 
     <biz.borealis.numberpicker.NumberPicker
         android:id="@+id/numberPickerHome"
