--- a/app/src/main/res/drawable/edditext_creationcompte_login_email.xml
+++ b/app/src/main/res/drawable/edditext_creationcompte_login_email.xml
@@ -2,12 +2,9 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp" >
-    <solid android:color="#d5f43939" />
+    <solid android:color="#3F51B4" />
     <corners
-        android:bottomRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:topLeftRadius="8dp"/>
+        />
 
 </shape>
 
