--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,214 +1,179 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/topbar"
-    tools:context="com.example.mathieu.parissportifs.LoginActivity">
 
+    tools:context="com.example.mathieu.parissportifs.LoginActivity"
+    android:weightSum="100">
 
-    <EditText
-        android:id="@+id/inputPassword"
-        android:layout_width="188dp"
-        android:layout_height="44dp"
-        android:layout_alignLeft="@+id/inputEmail"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/inputEmail"
-        android:layout_marginBottom="7dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
-        app:layout_constraintHorizontal_bias="0.638"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-
-    <EditText
-        android:id="@+id/inputEmail"
-        android:layout_width="188dp"
-        android:layout_height="44dp"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="Votre adresse mail"
-        android:inputType="textEmailAddress"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:layout_above="@+id/inputPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
-        app:layout_constraintHorizontal_bias="0.638" />
-
-    <Button
-        android:id="@+id/buttonSignIn"
-        android:layout_width="105dp"
-        android:layout_height="33dp"
-        android:layout_below="@+id/textViewForgotPassword"
-        android:layout_marginBottom="78dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="23dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="23dp"
-        android:layout_toEndOf="@+id/textViewForgotPassword"
-        android:layout_toRightOf="@+id/textViewForgotPassword"
-        android:background="@color/bruno_bleu_top"
-        android:text="@string/login_button_text"
-        android:textColor="@color/white"
-        android:textSize="12dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.737"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewForgotPassword"
-        android:layout_width="128dp"
-        android:gravity="center"
-        android:textSize="10dp"
-        android:textStyle="bold"
-
-        android:layout_height="32dp"
-        android:text="@string/ForgotPassword"
-        android:layout_below="@+id/inputEmail"
-        android:layout_alignLeft="@+id/inputPassword"
-        android:layout_alignStart="@+id/inputPassword"
-        android:layout_marginBottom="85dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.291"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
-
-    <TextView
-        android:id="@+id/textViewCreateNewAccount"
-        android:layout_width="220dp"
-        android:layout_height="25dp"
-
-        android:layout_alignEnd="@+id/buttonSignIn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/buttonSignIn"
-        android:layout_marginBottom="123dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:text="Pas encore d'adresse mail? crée en une !"
-        android:textSize="10dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/loginFacebookButton"
-        android:layout_width="215dp"
-        android:layout_height="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="91dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/loginGoogle"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/loginGoogle"
-        android:layout_width="224dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewCreateNewAccount"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954"
-        tools:layout_editor_absoluteY="144dp">
-
-    </com.google.android.gms.common.SignInButton>
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="29dp"
-        android:layout_height="46dp"
-        app:srcCompat="@drawable/icon_profile_topnbar"
-        app:layout_constraintRight_toLeftOf="@+id/inputEmail"
-        android:layout_marginRight="11dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSeparation"
-        app:layout_constraintVertical_bias="1.0" />
+        android:id="@+id/imageViewDesignFond"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp"
+        android:background="@drawable/banniere"
+        android:layout_weight="75"
+        />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="32dp"
-        android:layout_height="43dp"
-        app:srcCompat="@drawable/cadenas_login"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/inputPassword"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
-        app:layout_constraintHorizontal_bias="1.0" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="25"
+        >
 
-    <TextView
-        android:id="@+id/textViewSeparation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:text="- - - - - - - - - - Or - - - - - - - - - -"
-        android:textColor="@color/grey"
-        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCreateNewAccount" />
-</android.support.constraint.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/loginFacebookButton"
+            android:layout_width="301dp"
+            android:layout_height="37dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_marginTop="56dp"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.507" />
+
+        <TextView
+            android:id="@+id/textViewCreateNewAccount"
+            android:layout_width="309dp"
+            android:layout_height="30dp"
+            android:layout_alignEnd="@+id/buttonSignIn"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/buttonSignIn"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Crée un compte"
+            android:textSize="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />
+
+        <TextView
+            android:id="@+id/textViewForgotPassword"
+            android:layout_width="136dp"
+            android:layout_height="30dp"
+            android:layout_alignLeft="@+id/inputPassword"
+            android:layout_alignStart="@+id/inputPassword"
+            android:layout_below="@+id/inputEmail"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:text="Mot de passe oublié ?"
+            android:textSize="12dp"
+            app:layout_constraintHorizontal_bias="0.866"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="21dp"
+            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+
+        <Button
+            android:id="@+id/buttonSignIn"
+            android:layout_width="158dp"
+            android:layout_height="37dp"
+            android:layout_below="@+id/textViewForgotPassword"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="21dp"
+            android:layout_toEndOf="@+id/textViewForgotPassword"
+            android:layout_toRightOf="@+id/textViewForgotPassword"
+            android:background="@color/red_connexion_login"
+            android:text="Connexion"
+            android:textColor="@color/white"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.147"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+
+        <EditText
+            android:id="@+id/inputEmail"
+            android:layout_width="306dp"
+            android:layout_height="40dp"
+            android:layout_above="@+id/inputPassword"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/edditext_login_email"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:textSize="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="38dp" />
+
+        <EditText
+            android:id="@+id/inputPassword"
+            android:layout_width="306dp"
+            android:layout_height="40dp"
+            android:layout_alignLeft="@+id/inputEmail"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/inputEmail"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/edditext_login_email"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="Mot de passe"
+            android:inputType="textPassword"
+            android:textSize="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/loginGoogle"
+            android:layout_width="306dp"
+            android:layout_height="37dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="18dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginFacebookButton">
+
+        </com.google.android.gms.common.SignInButton>
+    </android.support.constraint.ConstraintLayout>
+
+
+</LinearLayout>
