--- a/app/src/main/res/layout/activity_pick_contact.xml
+++ b/app/src/main/res/layout/activity_pick_contact.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="-8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edittext"
         android:text="Invite un ami"
         android:textColor="@color/white"
@@ -24,7 +24,10 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
         android:id="@+id/buttonfinishpickcontacts"
@@ -37,24 +40,32 @@
         android:background="@drawable/rounded_edittext"
         android:text="Validation"
         android:textColor="@color/white"
-        app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_editor_absoluteY="501dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.989" />
 
     <ListView
-        android:id="@android:id/list"
-        android:layout_width="409dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="8dp"
+        android:id="@+id/listView"
+        android:layout_width="375dp"
+        android:layout_height="430dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonfinishpickcontacts"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pickcontact"
-        app:layout_constraintVertical_bias="0.0"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.869" />
 
 </android.support.constraint.ConstraintLayout>
