--- a/app/src/main/res/layout/fragment_home_competition.xml
+++ b/app/src/main/res/layout/fragment_home_competition.xml
@@ -5,42 +5,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.mathieu.parissportifs.HomeCompetition">
-    <android.support.constraint.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="top"
+            android:background="@drawable/bleupale_signin"
+            >
+
+            <TextView
+                android:id="@+id/competitionName"
+                android:layout_width="wrap_content"
+                android:layout_height="29dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="26dp"
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewLigue1"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="60dp"
+                android:layout_height="52dp"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:srcCompat="@drawable/france"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="39dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintRight_toLeftOf="@+id/textViewLigue1"
+                android:layout_marginRight="8dp"
+                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.666" />
+
+            <TextView
+                android:id="@+id/textViewLigue1"
+                android:layout_width="wrap_content"
+                android:layout_height="27dp"
+                android:layout_marginRight="228dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:textSize="18dp"
+                android:text="textTest"
+                android:textColor="@color/greyList"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
         <ListView
             android:id="@+id/playersList"
-            android:layout_width="0dp"
-            android:layout_height="400dp"
-            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="71dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.75"
-            android:layout_marginLeft="-16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" />
-
-        <TextView
-            android:id="@+id/competitionName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="TextView"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/playersList"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_bias="0.625" />
-    </android.support.constraint.ConstraintLayout>
+            app:layout_constraintTop_toBottomOf="@+id/competitionName"
+            app:layout_constraintVertical_bias="0.866" />
+
+    </LinearLayout>
+
 </FrameLayout>
