--- a/app/src/main/res/layout/activity_create_or_join_competition.xml
+++ b/app/src/main/res/layout/activity_create_or_join_competition.xml
@@ -39,7 +39,7 @@
             android:layout_gravity="right"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@color/BleuFoncéTOP"
+            android:background="@color/bouton_application_fond_bleu"
             android:gravity="center"
             android:text="Join Competition"
             android:textColor="@color/white"
@@ -53,7 +53,7 @@
             android:layout_gravity="left"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@color/BleuFoncéTOP"
+            android:background="@color/bouton_application_fond_bleu"
             android:gravity="center"
             android:text="Create Competition"
             android:textColor="@color/white"
