--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="374dp"
         android:ems="10"
         android:gravity="center"
-        android:hint="Pseudo"
+        android:hint="Choisis ton pseudo"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="@color/greyList"
@@ -49,11 +49,9 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/rounded_button_reset_password"
         android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:text="Rejoin ton équipe !"
+        android:background="@color/bouton_application_fond_bleu"
+        android:text="Rejoins ton équipe "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -66,18 +64,18 @@
         android:id="@+id/textView3"
         android:layout_width="382dp"
         android:layout_height="105dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="86dp"
-        android:textStyle="bold"
-        android:textSize="16dp"
         android:gravity="center"
-        android:text="@string/derni_re_ligne_droite_avant_que_tu_rejoigne_le_vestiaire_en_tant_que_fan_de_foot_nous_aimerions_savoir_ton_quipe_favorite_ainsi_que_ton_pseudo_amuse_toi_bien"
+        android:text="Dis nous quelle est ton équipe favorite ? "
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
