--- a/app/src/main/res/layout/activity_modify_profile.xml
+++ b/app/src/main/res/layout/activity_modify_profile.xml
@@ -115,20 +115,21 @@
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_width="196dp"
-        android:layout_height="48dp"
+        android:layout_width="245dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="23dp"
+        android:background="@color/bouton_application_fond_bleu"
         android:text="Enregistrer"
         android:textColor="@color/white"
-        android:background="@drawable/rounded_edittext"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="22dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewRemoveMyAccount"
-        app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        tools:layout_editor_absoluteY="442dp" />
 
     <TextView
         android:id="@+id/textViewDisconnect"
