--- a/app/src/main/res/layout/competitions_list_items.xml
+++ b/app/src/main/res/layout/competitions_list_items.xml
@@ -30,16 +30,16 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
-            android:layout_marginRight="31dp"
+            android:layout_marginRight="37dp"
             android:layout_marginTop="20dp"
             android:text="points"
             android:textColor="@color/greyList"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/textViewPoints"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintHorizontal_bias="1.0" />
+            android:layout_marginLeft="4dp" />
 
 
         <ImageView
@@ -71,6 +71,7 @@
             android:layout_marginLeft="41dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
+            android:textSize="20dp"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/ivCaptain"
@@ -80,12 +81,13 @@
         <TextView
             android:id="@+id/textViewPoints"
             android:layout_width="wrap_content"
-            android:layout_height="23dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
+            android:layout_marginTop="20dp"
             android:text="200"
             android:textColor="@color/red"
+            android:textSize="18sp"
             app:layout_constraintLeft_toRightOf="@+id/championshipName"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp" />
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </com.daimajia.swipe.SwipeLayout>
