--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -23,29 +23,29 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="274dp"
+        android:layout_marginBottom="205dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.597" />
+        app:layout_constraintHorizontal_bias="0.505" />
 
     <!-- Login Button -->
 
     <Button
         android:id="@+id/btn_reset_password"
-        android:layout_width="274dp"
-        android:layout_height="46dp"
-        android:text="Reset Password "
+        android:layout_width="245dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="39dp"
+        android:background="@color/bouton_application_fond_bleu"
+        android:text="Ok "
         android:textColor="@color/white"
-        android:textSize="20dp"
-        android:background="@drawable/rounded_button_reset_password"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="173dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="0.503" />
 
 
     <ProgressBar
@@ -67,8 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="124dp"
-        android:text="Reset Password"
+        android:layout_marginTop="118dp"
+        android:text="Réinitialise ton mot de passe"
         android:textStyle="bold"
         android:textSize="20dp"
         android:textColor="@color/greyList"
@@ -78,7 +78,7 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.484" />
+        app:layout_constraintHorizontal_bias="0.464" />
 
     <TextView
         android:id="@+id/textView10"
@@ -89,10 +89,10 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Entrer votre adresse email, pour renétialiser votre mot de passe "
+        android:text="Entre ton adresse email : "
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDescriptif"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.692" />
 </android.support.constraint.ConstraintLayout>
