--- a/app/src/main/res/layout/activity_super_user_navigation.xml
+++ b/app/src/main/res/layout/activity_super_user_navigation.xml
@@ -29,7 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profiletest" />
+        app:srcCompat="@drawable/ecrou" />
 
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottomBar"
