--- a/app/src/main/res/layout/players_items_list.xml
+++ b/app/src/main/res/layout/players_items_list.xml
@@ -31,6 +31,8 @@
 
     <TextView
         android:id="@+id/textViewPlayerName"
+        android:textStyle="bold"
+        android:textSize="15dp"
         android:layout_width="57dp"
         android:layout_height="19dp"
         android:text="TextView"
@@ -57,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="17dp"
         android:text="TextView"
+        android:textColor="@color/red"
         app:layout_constraintLeft_toRightOf="@+id/textViewPlayerName"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="42dp" />
@@ -66,6 +69,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="pts"
+        android:textStyle="bold"
+        android:textSize="15dp"
         app:layout_constraintLeft_toRightOf="@+id/textViewPoints"
         android:layout_marginLeft="13dp"
         app:layout_constraintTop_toTopOf="parent"
