--- a/app/src/main/res/layout/challenge_items.xml
+++ b/app/src/main/res/layout/challenge_items.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="18dp"
         android:layout_marginTop="26dp"
         android:text="1"
-        android:textColor="#000000"
+        android:textColor="@color/greyList"
         android:textSize="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_height="28dp"
         android:layout_marginTop="26dp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="@color/greyList"
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewPosition"
@@ -38,7 +38,7 @@
         android:layout_height="26dp"
         android:layout_marginTop="26dp"
         android:text="200"
-        android:textColor="#000000"
+        android:textColor="@color/red"
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewNameCompetition"
@@ -50,7 +50,6 @@
         android:layout_height="26dp"
         android:layout_marginTop="26dp"
         android:text="points"
-        android:textColor="#000000"
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewChampionShipName"
