--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/bon_bleu_top</item>
-        <item name="colorAccent">@color/BleuFoncéTOP</item>
+        <item name="colorAccent">@color/bon_bleu_top</item>
         <item name="windowNoTitle">true</item>
     </style>
 
