--- a/app/src/main/res/drawable/list_highlight_background.xml
+++ b/app/src/main/res/drawable/list_highlight_background.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="4dp" />
+        android:width="1dp"
+        android:color="@color/bouton_application_fond_bleu"/>
 
     <solid
         android:color="@color/AliceBlue" />
