--- a/app/src/main/res/layout/challenge_items.xml
+++ b/app/src/main/res/layout/challenge_items.xml
@@ -42,18 +42,18 @@
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewNameCompetition"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginLeft="76dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="65dp"
         android:layout_height="26dp"
         android:layout_marginTop="26dp"
-        android:text="points"
-        android:textSize="18dp"
+        android:text="pts"
+        android:textSize="17dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewChampionShipName"
-        android:layout_marginLeft="0dp" /><![CDATA[
+        android:layout_marginLeft="11dp" /><![CDATA[
 
 
         app:layout_constraintLeft_toRightOf="@+id/textViewPlayerRank"
