--- a/app/src/main/res/layout/competitions_list_items.xml
+++ b/app/src/main/res/layout/competitions_list_items.xml
@@ -30,16 +30,14 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
-            android:layout_marginRight="37dp"
-            android:layout_marginTop="20dp"
-            android:text="points"
+            android:layout_marginTop="16dp"
+            android:text="pts"
             android:textColor="@color/greyList"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/textViewPoints"
-            android:layout_marginLeft="4dp" />
+            android:layout_marginRight="36dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
 
         <ImageView
@@ -47,17 +45,17 @@
             android:layout_width="56dp"
             android:layout_height="50dp"
             android:background="@drawable/france"
-            android:layout_marginLeft="26dp"
+            android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="27dp" />
 
         <TextView
             android:id="@+id/championshipName"
             android:layout_width="100dp"
             android:layout_height="23dp"
-            android:layout_marginLeft="41dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="29dp"
+            android:layout_marginTop="16dp"
             android:text="TextView"
             android:textColor="#000000"
             app:layout_constraintLeft_toRightOf="@+id/ivCaptain"
@@ -68,7 +66,7 @@
             android:layout_width="217dp"
             android:layout_height="25dp"
             android:layout_marginBottom="13dp"
-            android:layout_marginLeft="41dp"
+            android:layout_marginLeft="29dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
             android:textSize="20dp"
@@ -82,12 +80,14 @@
             android:id="@+id/textViewPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="33dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:text="200"
             android:textColor="@color/red"
             android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/championshipName"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginLeft="87dp"
+            app:layout_constraintRight_toLeftOf="@+id/textView9"
+            android:layout_marginRight="8dp" />
     </android.support.constraint.ConstraintLayout>
 </com.daimajia.swipe.SwipeLayout>
