--- a/app/src/main/res/layout/fragment_home_competition.xml
+++ b/app/src/main/res/layout/fragment_home_competition.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="top"
-            android:background="@drawable/topba"
-            >
+            android:background="@drawable/topba">
 
             <TextView
                 android:id="@+id/competitionName"
@@ -41,19 +40,19 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="60dp"
-                android:layout_height="52dp"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:srcCompat="@drawable/france"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="61dp"
+                android:layout_height="46dp"
                 android:layout_marginBottom="39dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/textViewLigue1"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.666"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/textViewLigue1"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
-                app:layout_constraintHorizontal_bias="0.666" />
+                app:srcCompat="@drawable/france" />
 
             <TextView
                 android:id="@+id/textViewLigue1"
@@ -62,9 +61,9 @@
                 android:layout_marginRight="228dp"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:textSize="17dp"
                 android:text="textTest"
                 android:textColor="@color/greyList"
+                android:textSize="17dp"
                 android:textStyle="bold"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -74,10 +73,10 @@
             android:id="@+id/playersList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_gravity="bottom"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
