--- a/app/src/main/res/layout/players_items_list.xml
+++ b/app/src/main/res/layout/players_items_list.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
+        android:textSize="15dp"
+        android:textColor="@color/greyList"
         android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,6 +35,7 @@
         android:id="@+id/textViewPlayerName"
         android:textStyle="bold"
         android:textSize="15dp"
+        android:textColor="@color/greyList"
         android:layout_width="57dp"
         android:layout_height="19dp"
         android:text="TextView"
@@ -57,7 +60,7 @@
         android:id="@+id/textViewPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="17dp"
+        android:layout_marginLeft="37dp"
         android:text="TextView"
         android:textColor="@color/red"
         app:layout_constraintLeft_toRightOf="@+id/textViewPlayerName"
@@ -72,7 +75,7 @@
         android:textStyle="bold"
         android:textSize="15dp"
         app:layout_constraintLeft_toRightOf="@+id/textViewPoints"
-        android:layout_marginLeft="13dp"
+        android:layout_marginLeft="7dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="42dp" />
 </android.support.constraint.ConstraintLayout>
