--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -46,7 +46,7 @@
 
     <ListView
         android:id="@+id/listViewRanking"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
 
